[gd_scene load_steps=11 format=2]

[ext_resource path="res://Script/letras/PressStart2P.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/pause.gd" type="Script" id=2]
[ext_resource path="res://Cenas/popUpControl.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=7]
Button/colors/font_color = Color( 0, 0, 0, 1 )
Button/colors/font_color_disabled = Color( 0, 0, 0, 1 )
Button/colors/font_color_focus = Color( 0, 0, 0, 1 )
Button/colors/font_color_hover = Color( 0, 0, 0, 1 )
Button/colors/font_color_pressed = Color( 0, 0, 0, 1 )
Button/constants/hseparation = 0
Button/fonts/font = null
Button/styles/disabled = null
Button/styles/focus = SubResource( 10 )
Button/styles/hover = SubResource( 11 )
Button/styles/normal = SubResource( 12 )
Button/styles/pressed = SubResource( 13 )

[sub_resource type="DynamicFont" id=8]
size = 33
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 70
font_data = ExtResource( 1 )

[node name="pause" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 604.0
color = Color( 0, 0, 0, 0.701961 )

[node name="controls" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -264.0
margin_top = 8.0
margin_right = 264.0
margin_bottom = 152.0

[node name="retornar" type="Button" parent="controls"]
margin_right = 528.0
margin_bottom = 33.0
focus_neighbour_top = NodePath("../quitBtn")
theme = SubResource( 7 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0.364706, 1, 0.537255, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 8 )
text = "Retornar"
expand_icon = true

[node name="som" type="Button" parent="controls"]
margin_top = 37.0
margin_right = 528.0
margin_bottom = 70.0
focus_neighbour_top = NodePath("../quitBtn")
theme = SubResource( 7 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0.364706, 1, 0.537255, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 8 )
text = "Som"
expand_icon = true

[node name="controlBtn" type="Button" parent="controls"]
margin_top = 74.0
margin_right = 528.0
margin_bottom = 107.0
theme = SubResource( 7 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0.364706, 1, 0.537255, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 8 )
text = "Controles"
expand_icon = true

[node name="quitBtn" type="Button" parent="controls"]
margin_top = 111.0
margin_right = 528.0
margin_bottom = 144.0
focus_neighbour_bottom = NodePath("../retornar")
theme = SubResource( 7 )
custom_colors/font_color_focus = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color = Color( 0.364706, 1, 0.537255, 1 )
custom_colors/font_color_hover = Color( 0.827451, 0.231373, 0.203922, 1 )
custom_colors/font_color_pressed = Color( 0.905882, 0.494118, 0.0431373, 1 )
custom_fonts/font = SubResource( 8 )
text = "Menu"
expand_icon = true

[node name="Label" type="Label" parent="."]
margin_left = 102.0
margin_top = 155.0
margin_right = 942.0
margin_bottom = 225.0
custom_fonts/font = SubResource( 9 )
text = "jogo pausado"

[node name="popUpControl" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="controls/retornar" to="." method="_on_retornar_pressed"]
[connection signal="pressed" from="controls/controlBtn" to="." method="_on_controlBtn_pressed"]
[connection signal="pressed" from="controls/quitBtn" to="." method="_on_quitBtn_pressed"]
